--- a/pages/projects/projects.css
+++ b/pages/projects/projects.css
@@ -153,7 +153,7 @@ section img {
     top: 140px;
     left: 25px;
     text-align: left;
-    font-size: 6em;
+    font-size: 5em;
     font-family: raleway-small;
     color: #F7F9F9;
     margin: 0px; padding: 5px;
@@ -163,7 +163,7 @@ section img {
     margin: 130px 0px; padding: 0px;
     position: relative;
     text-align: left;
-    font-size: 4em;
+    font-size: 3em;
     left: 25px;
     font-family: raleway-small;
     color: #F1948A  ;  
